Fix menu layout issues.

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -10,14 +10,6 @@
     font-style: normal;
 }
 
-* {
-
-    margin: 0;
-   
-    padding: 0;
-   
-   }
-
 html { 
 	visibility:hidden; 
 }
@@ -52,6 +44,7 @@ body
     height: 45px;
     padding-top: 0px;
     padding-bottom: 0px;
+    border-bottom: solid white 1px;
 }
 
 #main
@@ -68,10 +61,10 @@ footer
     bottom: 0;
     width:100%;
     height: 50px;
-    background-color:rgb(33, 37, 41);
+    background-color:rgb(37, 37, 37);
     text-align: center;
     padding-top: 5px;
-    color: white;
+    color: #7F7F7F;
     font-size:medium;
     padding-top: 3px;
 }
@@ -87,6 +80,100 @@ footer
 .col-sm{
 	margin: 4px;
 }
+
+/*__________________________________________________________________________
+/ Navigation bar styles start                                              /
+/__________________________________________________________________________*/
+
+.navbar {
+	padding-top: 0 !important;
+    padding-bottom: 0 !important;
+	background: #ffffff;
+	padding-left: 0px;
+	padding-right: 0px;
+	border-bottom: 1px solid #dfe3e8;
+	border-radius: 0;
+  }
+  
+ .navbar .navbar-brand {
+	padding-left: 0;
+	font-size: 25px;
+  
+  }
+  .navbar .navbar-brand b {
+	color: #5c6ac4;		
+  }
+    
+  .navbar .navbar-nav {
+	position: relative;
+    background-color:rgb(37, 37, 37);
+    padding-left: 20px;
+
+  }
+
+  
+  
+  .navbar a, .navbar a:active {
+	color: #888;
+	font-size: 17px;
+	background: transparent;
+  }
+
+  @media (max-width: 768px){
+	.navbar .login-form {
+        width: 100%;
+	    border: none;
+	}
+   
+	.navbar .navbar-nav .btn-secondary, .navbar .navbar-nav .btn-secondary:active {
+	  display: block;
+	}
+  }
+
+  #brand-icon{
+    margin-left: 16px;
+  }
+
+  .navbar-toggler{
+    margin-right: 8px;
+    margin-bottom: 2px;
+    padding: 2px;
+   
+}
+
+.navbar-dark{
+    margin-bottom: 2px;
+    
+   /* border-color: rgba(255, 255, 255, .3);*/
+}
+  
+  .navbar .btn-secondary, .navbar .btn-secondary:active {
+	color: #fff;
+	background: #5c6ac4 !important;
+	padding-top: 8px;
+	padding-bottom: 6px;
+	border-radius: 4px;
+	vertical-align: middle;
+	border: none;
+	min-width: 120px;
+	margin: 2px 0;
+  }
+ 
+  .navbar .nav-item i {
+	font-size: 18px;
+  }
+
+  .dropdown-menu{
+	padding-top: 5px;
+  }
+
+  .dropdown-item{
+	padding-left: 5px;
+	padding-right: 5px;
+  }
+  /*____________________________________________________________________________/
+  / Navigation bar styles end                                                   /
+  ______________________________________________________________________________*/
 
 /* Simbols page */
 
